# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.232 2006/09/10 19:17:05 agaffney Exp $

  10 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/fe/gtk/Partitioning.py:
  add 'apple_bootstrap' to color map

  6 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/fe/gtk/MakeDotConf.py:
  make ACCEPT_KEYWORDS code arch-agnostic. fixes bug #146553

  1 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/fe/gtk/Partitioning.py:
  add hfs+ to list of supported filesystems and color mapping

  3 Aug 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/fe/gtk/RunInstall.py, src/fe/gtk/gtkfe.py:
  ask user if they really want to exit with X in corner clicked

*GLI-gtk-0.4 (31 Jul 2006)

  24 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/fe/gtk/Kernel.py:
  remove bootsplash option
  add custom kernel .config URI option

  8 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/fe/gtk/RunInstall.py, src/fe/gtk/URIBrowser.py:
  remove extra print statements

*GLI-gtkfe-0.3 (11 Feb 2006)

  4 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
  add X of Y to FutureBar
  update Welcome.py help for install mode
  networkless support in Stage.py

  2 May 2006; Andrew Gaffney <agaffney@gentoo.org>
  added splashscreen

  10 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  check for partitions of 'unknown' type and warn user

  6 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  KEYMAP and CONSOLEFONT default to blank in OtherSettings.py

  5 Feb 2006; John N. Laliberte <allanonjl@gentoo.org>
  OtherSettings.py: Replacement for rc.conf screen.
  
  4 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  initial working help
  help text for Welcome
  add TextBufferMarkup.py

  30 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  if user doesn't add any interfaces for post-install, confirm

  13 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>