@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.232 2006/09/10 19:17:05 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.233 2006/09/11 12:18:42 agaffney Exp $
+
+  11 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/fe/gtk/PartProperties.py:
+  pull list of supported filesystems from GLISD instead of parent
 
   10 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/fe/gtk/Partitioning.py:
